list.of로 변경